--- a/sanity/styles/variable.css
+++ b/sanity/styles/variable.css
@@ -4,7 +4,7 @@
 
 :root {
   /* Brand colors */
-  --brand-primary: #cc4a1e;
+  --brand-primary: #f0ea33;
   --brand-primary--inverted: #ffffff;
   --brand-secondary: #ffa800;
   --brand-secondary--inverted: #3c1609;
