--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,9 +8,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,900&display=swap');
 
- body {
+body {
   font-family: 'Lato', sans-serif;
-} 
+}
 
 .pt-font {
   font-family: 'PT Sans', sans-serif;
@@ -27,10 +27,10 @@
   text-shadow: 5px 5px 15px rgba(0, 0, 0, 0.1);
 }
 
-.maylike-products-wrapper{
+.maylike-products-wrapper {
   margin-top: 120px;
 }
-.maylike-products-wrapper h1{
+.maylike-products-wrapper h1 {
   text-align: center;
   margin: 50px;
   color: #324d67;
@@ -44,7 +44,7 @@
   /* overflow-x: hidden; */
 }
 
-.maylike-products-container{
+.maylike-products-container {
   display: flex;
   justify-content: center;
   gap: 15px;
@@ -60,48 +60,53 @@
 .track:hover {
   animation-play-state: paused;
 }
-.small-images-container{
+.small-images-container {
   display: flex;
+  flex-direction: row;
   gap: 10px;
   margin-top: 20px;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
 }
-.small-image{
+.small-image {
   border-radius: 8px;
   background-color: #ebebeb;
   width: 100px;
   height: 100px;
   cursor: pointer;
 }
-.selected-image{
-  background-color:#f1f2b0;
+.selected-image {
+  background-color: #f1f2b0;
 }
 @keyframes marquee {
-  from { transform: translateX(0); }
-  to { transform: translateX(-50%); }
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(-50%);
+  }
 }
-.product-detail-image{
+.product-detail-image {
   border-radius: 15px;
-   background-color: #ebebeb;
+  background-color: #ebebeb;
   cursor: pointer;
-  transition: .3s ease-in-out;
+  transition: 0.3s ease-in-out;
 }
-.product-detail-image:hover{
-  background-color: #2da2f0;
+.product-detail-image:hover {
+  background-color: #e5eaed;
 }
-.product-detail-container{
+.product-detail-container {
   display: flex;
- gap: 40px;
- margin: 20px;
- margin-top: 60px;
- color: #324d67;
-flex-wrap: wrap;
+  gap: 40px;
+  margin: 20px;
+  margin-top: 60px;
+  color: #e1e7ec;
+  flex-wrap: wrap;
 }
-.product-detail-container .product-detail-image{
+.product-detail-container .product-detail-image {
   width: 400px;
   height: 400px;
 }
-@media screen and (max-width:800px) {
+@media screen and (max-width: 800px) {
   .track {
     animation: marquee 10s linear infinite;
     width: 550%;
@@ -125,7 +130,7 @@ flex-wrap: wrap;
 }
 .loading-screen .dot::before {
   position: absolute;
-  content: "";
+  content: '';
   width: 100%;
   height: 100%;
   background: inherit;
@@ -135,43 +140,105 @@ flex-wrap: wrap;
 @-webkit-keyframes anime {
   50%,
   75% {
-      transform: scale(2.5);
+    transform: scale(2.5);
   }
   80%,
   100% {
-      opacity: 0;
+    opacity: 0;
   }
 }
 .loading-screen .dot:nth-child(1) {
-  background-color: #4285f5; 
+  background-color: #4285f5;
 }
 .loading-screen .dot:nth-child(2) {
   background-color: #ea4436;
 }
 
 .loading-screen .dot:nth-child(3) {
-  background-color: #fbbd06; 
+  background-color: #fbbd06;
 }
 
 .loading-screen .dot:nth-child(4) {
-  background-color: #34a952;  
+  background-color: #34a952;
 }
 
 .loading-screen .dot:nth-child(5) {
-  background-color: #cf9fff; 
+  background-color: #cf9fff;
 }
 .loading-screen .dot:nth-child(1)::before {
   animation-delay: 0.2s;
-} 
+}
 .loading-screen .dot:nth-child(2)::before {
   animation-delay: 0.4s;
-} 
+}
 .loading-screen .dot:nth-child(3)::before {
   animation-delay: 0.6s;
-} 
+}
 .loading-screen .dot:nth-child(4)::before {
   animation-delay: 0.8s;
-} 
+}
 .loading-screen .dot:nth-child(5)::before {
   animation-delay: 1s;
-} 
+}
+.spinner-wrapper {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgb(255, 255, 255);
+  z-index: 9999;
+}
+.spinner {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  height: 60px;
+  width: 60px;
+  margin: 0px auto;
+  -webkit-animation: rotation 0.6s infinite linear;
+  -moz-animation: rotation 0.6s infinite linear;
+  -o-animation: rotation 0.6s infinite linear;
+  animation: rotation 0.6s infinite linear;
+  border-left: 6px solid rgba(0, 174, 239, 0.15);
+  border-right: 6px solid rgba(0, 174, 239, 0.15);
+  border-bottom: 6px solid rgba(0, 174, 239, 0.15);
+  border-top: 6px solid rgba(0, 174, 239, 0.8);
+  border-radius: 100%;
+}
+
+@-webkit-keyframes rotation {
+  from {
+    -webkit-transform: rotate(0deg);
+  }
+  to {
+    -webkit-transform: rotate(359deg);
+  }
+}
+@-moz-keyframes rotation {
+  from {
+    -moz-transform: rotate(0deg);
+  }
+  to {
+    -moz-transform: rotate(359deg);
+  }
+}
+@-o-keyframes rotation {
+  from {
+    -o-transform: rotate(0deg);
+  }
+  to {
+    -o-transform: rotate(359deg);
+  }
+}
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(359deg);
+  }
+}
